Changelog
=========

Ticket numbers in changelog entries can be looked up by visiting
``https://github.com/dgw/sopel-wolfram/issue/<number>``

sopel-wolfram v0.3.1 "Nusumareta kuchibiru"
-------------------------------------------

Updates:

* Unicode-encode query to avoid UnicodeEncodeError on non-ASCII characters

sopel-wolfram v0.3.0 "So long!"
-------------------------------

Updates:

* Results longer than 3 lines will be sent via NOTICE instead of flooding channels (#8)

sopel-wolfram v0.2.1 "Mae shika mukanee"
----------------------------------------

Updates:

* Output now split into multiple messages when line breaks are present (#4)
* Tell pip we do not want wolframalpha 3.0 yet (#6)

sopel-wolfram v0.2.0 "Miraibashi"
---------------------------------

Updates:

* Try a lot harder to give useful output (#3)
* Tell user to try again if an unspecified error occurs (empty error message)

Meta:

* Cleanup: PEP8 & unused imports
* Refactor to make future addition of integration tests easier

sopel-wolfram v0.1.2 "Switch"
-----------------------------

Updates:

* Shorten some error messages
* Identify as "[W|A]" instead of "[Wolfram]" in output for brevity
* Ensure all module output is prefixed
* Add more examples to help output and README

Meta:

* README now includes installation instructions and where to get help/report bugs

sopel-wolfram v0.1.1 "Already"
------------------------------

Updates:

* Now outputs error if app_id is missing (#1)

Meta:

* README reformatted (thanks @\ `maxpowa <https://github.com/maxpowa>`_)
* Begin maintaining version history in NEWS file


sopel-wolfram v0.1.0 "Beginner"
-------------------------------

* Initial release
* Adopted from https://github.com/maxpowa/inumuta-modules/blob/e0b195c/wolfram.py with permission