@@ -1,2 +1,2 @@
 sopel>=6.0,<7
-wolframalpha>=2.0,<3.0
+wolframalpha>=2.0,<4.0
