@@ -57,16 +57,31 @@ def wa_query(app_id, query):
     except Exception as e:
         return 'An error occurred: {}'.format(e.message or 'Unknown error, try again!')
 
-    if len(result.pods) >= 2:
+    num_results = 0
+    try:  # try wolframalpha 3.x way
+        num_results = int(result['@numpods'])
+    except TypeError:  # fall back to wolframalpha 2.x way
+        num_results = len(result.pods)
+    finally:
+        if num_results == 0:
+            return 'No results found.'
+
+    try:
         try:
-            input = result.pods[0].text
-            output = result.pods[1].text
-        except (IndexError, KeyError):
-            pass
-        else:
-            return '{} = {}'.format(input, output)
-
-    if len(result.pods) > 0:
+            input = next(result.pods).text
+            output = next(result.results).text
+        except StopIteration:
+            raise
+        except (TypeError, AttributeError):
+            try:
+                input = result.pods[0].text
+                output = result.pods[1].text
+            except (IndexError, KeyError):
+                raise
+    except (IndexError, KeyError, StopIteration):
         return 'No text-representable result found, see http://wolframalpha.com/input/?i={}'.format(web.quote(query))
-
-    return 'No results found.'
+    except Exception as e:
+        return 'Unhandled {}; please report the query used ("{}") at https://dgw.me/wabug'.format(type(e), query)
+    if not output:
+        return input
+    return '{} = {}'.format(input, output)
